# Gateway-service

./: .darglint  .dockerignore  .editorconfig  .env-dev  .env-kafka  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  setup.cfg
.devcontainer/: devcontainer.json  docker-compose.yml
.devcontainer/app/: .p10k.zsh  .zshrc  Dockerfile  post-start.sh
db/: без-множества-карт.sql  без-множества-карт.txt  вариант-с-картами.sql  вариант-с-картами.txt
deploy/: configmap.yaml  deployment.yaml  service.yaml
deploy/gateway-charts/: Chart.yaml  values.yaml
deploy/gateway-charts/templates/: configmap.yaml  deployment.yaml  service.yaml
deploy/gateway-charts/values/: test.yaml
src/app/: client.py  config.py  main.py
src/app/api/: auth_router.py  client.py  registrate_router.py  report_router.py  transaction_router.py  verify_router.py
src/app/api/healthz/: healthz_router.py
src/app/core/: settings.py
src/app/dependency/: auth_dependency.py
src/app/metrics/: prometheus_metric.py
src/app/schemas/: auth_schemas.py  report_schemas.py  transaction_schemas.py  validators.py  verify_schemas.py
src/tests/: test_api_gateway.py
