[tool.poetry]
name = "workspace"
version = "0.1.0"
description = ""
authors = ["Aleksey Panin <lllrikitikilll@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
httpx = "^0.27.0"
pydantic-settings = "^2.4.0"
wemake-python-styleguide = "^0.19.2"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
flake8 = "^7.1.0"
mypy = "^1.11.1"
black = "^24.4.2"
pytest-asyncio = "^0.23.8"
pytest-cov = "^5.0.0"
respx = "^0.21.1"
pytest-env = "^1.1.3"
pytest-mock = "^3.14.0"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
